--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,17 @@ html, body {
 .notlist{
   flex:1;
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: 250px;
+}
+.notlist2{
+  flex:1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 250px;
+  background-color: gray;
 }
 .main{
   height: 100vh;
@@ -276,4 +286,105 @@ html, body {
   width: 100%;
   background-color: aqua;
   flex:1;
+}
+.modal-dialog-centered{
+  max-width: 600px;
+}
+.modal-header{
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+.modal-body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+}
+.image-upload{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.upload-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+.file-input {
+  display: none;
+}
+.file-label {
+  cursor: pointer;
+}
+.post-container{
+  width: 1000px;
+  height: 635px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+}
+.post-header{
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: sans-serif;
+  border: none;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
+}
+.post{
+  display: flex;
+
+}
+.picture{
+  width: 600px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.picture img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  box-sizing: border-box;
+  border-radius: 0 0 0 5px;
+}
+.text {
+  width: 400px;
+  height: 600px;
+  border: none;
+  border-left: 3px solid rgba(0, 0, 0, 0.1);
+  border-right: 3px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.type-in {
+  height: 300px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  resize: none;
+  overflow: auto;
+  outline: none;
+  border: none;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
 }
