--- a/src/App.css
+++ b/src/App.css
@@ -377,7 +377,7 @@ html, body {
   box-sizing: border-box;
 }
 .type-in {
-  height: 300px;
+  height: 550px;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -386,5 +386,12 @@ html, body {
   overflow: auto;
   outline: none;
   border: none;
-  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid black;
+}
+.submit{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  flex: 1;
 }
